fix z-index issue with navigation buttons

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,18 +1,21 @@
-/*.overlay{
+.overlay{
 	width: 100%;
 	height: 100%;
 	position: absolute;
+	z-index: 3;
 	background-color: rgba(0, 0, 0, 0.4);
 }
-*/
+
+.slides-navigation {
+	z-index: 6;
+}
+
 .slides-navigation .next, 
 .slides-navigation .prev {
-	position: absolute;
 	width : 20px;
 	height: 20px;
 	background-size: cover;
 	background-repeat: no-repeat;
-	z-index: 6;
 }
 
 .slides-navigation a.next {
@@ -32,25 +35,29 @@
 	top: 50%;
 	text-align: center;
 	margin-top: -125px;
-	z-index:2;
+	z-index:5;
 }
 
-.heading {
+.title .heading {
 	color: #e5e9eb;
 	font-weight: 100;
 	font-family: 'Open Sans Condensed', sans-serif;
 	letter-spacing: 5px;
+
+
 }
 
-.main{
+.title .heading .main{
 	font-size: 25px;
 	text-shadow: 1px 1px #b4b9bb;
 
+
 }
 
-.sub{
+.title .heading .sub{
 	color: #b4b9bb;
 	font-size: 10px;
+
 }
 
 
